[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ab-testing-platform"
version = "0.1.0"
description = "A/B testing platform with statistical decision engine and REST API"
requires-python = ">=3.11"

dependencies = [
    # Data
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    # Database
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    # Config & validation
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.26",          # test FastAPI
    # Code quality
    "black>=23.0",
    "ruff>=0.2",
    "mypy>=1.8",
    # Type stubs
    "pandas-stubs>=2.1",
    # Notebooks (EDA only)
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[tool.setuptools.packages.find]
where = ["src"]

# --- Black ---
[tool.black]
line-length = 88
target-version = ["py311"]

# --- Ruff ---
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by black

# --- Mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/ab_testing --cov-report=term-missing"
